// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageButton should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled fill-light size-30"
  onClick={[Function]}
  tabIndex={-1}
  type="button"
>
  <div
    className="uui-caption"
  >
    ...
  </div>
</button>
`;

exports[`PageButton should be rendered correctly with props 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable fill-white size-24"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption"
  >
    1
  </div>
</button>
`;
